# pydantic-httpx

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pydantic_httpx/: __init__.py  _defaults.py  _request_builder.py  _response_validator.py  async_client.py  client.py  config.py  endpoint.py  exceptions.py  resource.py  response.py  types.py  validators.py
tests/: test_assignment_syntax.py  test_config.py  test_coverage_boost.py  test_edge_cases.py  test_endpoint.py  test_exceptions.py  test_pydantic_model_params.py  test_response.py  test_type_hint_validation.py  test_version.py
tests/integration/: __init__.py  test_advanced_features.py  test_async_features.py  test_basic.py  test_request_body_params.py  test_validators.py
