[project]
name = "pydantic-httpx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Islam Ayman", email = "islam.ayman.mohammed@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pydantic-httpx = "pydantic_httpx:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
